--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
         .letter-paper {
             background: #FFFFFF;
             border-radius: 20px;
-            padding: 30px;
-            max-width: 350px;
-            width: 100%;
+            padding: 20px;
+            max-width: 280px;
+            width: 90%;
             box-shadow: 0 20px 60px rgba(0,0,0,0.3);
             transform: rotateY(180deg);
             backface-visibility: hidden;
@@ -183,24 +183,24 @@
 
         .letter-text {
             color: #333333;
-            font-size: 16px;
-            line-height: 1.6;
+            font-size: 14px;
+            line-height: 1.5;
             text-align: left;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
         }
 
         .letter-header {
             color: #8B5CF6;
-            font-size: 18px;
+            font-size: 16px;
             font-weight: 600;
-            margin-bottom: 15px;
+            margin-bottom: 12px;
         }
 
         .signature {
-            margin-top: 20px;
+            margin-top: 15px;
             text-align: right;
             font-weight: bold;
-            color: #8B5CF6;
+            color: #E91E63;
         }
 
         .close-letter {
@@ -322,7 +322,7 @@
                 On this special day, I just want to take a moment to remind you of how incredibly grateful I am to have you in my life. Your strength, your grace, your calm maturity — they all inspire me every single day.<br><br>
                 You've taught me so much without even trying — how to stay grounded, how to handle chaos with calm, how to love deeply without saying much. You're not just the sunshine in my day but also the calm moonlight in my night.<br><br>
                 I may not always have the perfect words, but I hope today, this little gesture brings a smile to your face and warmth to your heart. You deserve every beautiful thing this world has to offer.<br><br>
-                May this new year bring you endless peace, growth, and joy — and may I be lucky enough to walk every step of it by your side.<br><br>
+                May this new year bring you endless peace, growth, and joy — and may I be lucky enough to walk every step of it by your side.
                 <div class="signature">With all my love,<br><strong>Sanket</strong> ❤️</div>
             </div>
         </div>
