--- a/index.html
+++ b/index.html
@@ -166,14 +166,14 @@
             align-items: center;
             justify-content: center;
             z-index: 102;
-            padding: 20px;
+            padding: 30px;
         }
 
         .letter-paper {
-            background: #FFFFFF;
-            border-radius: 20px;
+            background: hsl(0, 0%, 100%);
+            border-radius: 30px;
             padding: 20px;
-            max-width: 280px;
+            max-width: 380px;
             width: 90%;
             box-shadow: 0 20px 60px rgba(0,0,0,0.3);
             transform: rotateY(180deg);
@@ -184,7 +184,7 @@
         .letter-text {
             color: #333333;
             font-size: 14px;
-            line-height: 1.5;
+            line-height: 1.3;
             text-align: left;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
         }
